--- a/echo_client/host/Cargo.toml
+++ b/echo_client/host/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2018"
 [dependencies]
 libc = "0.2.48"
 optee-teec = { path = "../../../optee-teec" }
-sae_net = { path = "../../../host-lib/sae_net" }
+sae_net = { path = "../../sae_net" }
 tokio = { version = "0.3", features = ["full"] }
 tokio-util = { version = "0.5.0", features = ["full"]} 
 bytes = "0.6"
