--- a/sae_net/Cargo.toml
+++ b/sae_net/Cargo.toml
@@ -11,3 +11,4 @@ tokio = { version = "0.3", features = ["full"] }
 tokio-util = { version = "0.5.0", features = ["full"]} 
 bytes = "0.6"
 futures = "0.3.8"
+async-trait = "0.1.42"
