--- a/echo_client/host/Cargo.toml
+++ b/echo_client/host/Cargo.toml
@@ -15,6 +15,7 @@ tokio = { version = "0.3", features = ["full"] }
 tokio-util = { version = "0.5.0", features = ["full"]} 
 bytes = "0.6"
 futures = "0.3.8"
+ring = "0.16.1"
 
 
 [profile.release]
