--- a/sae_net/Cargo.toml
+++ b/sae_net/Cargo.toml
@@ -12,3 +12,5 @@ tokio-util = { version = "0.5.0", features = ["full"]}
 bytes = "0.6"
 futures = "0.3.8"
 async-trait = "0.1.42"
+hex = "0.4.2"
+ring = "0.16.1"
