--- a/echo_client/host/Cargo.toml
+++ b/echo_client/host/Cargo.toml
@@ -11,11 +11,13 @@ edition = "2018"
 libc = "0.2.48"
 optee-teec = { path = "../../../optee-teec" }
 sae_net = { path = "../../sae_net" }
+sae_core = { path = "../../../examples/sae_core/host" }
 tokio = { version = "0.3", features = ["full"] }
 tokio-util = { version = "0.5.0", features = ["full"]} 
 bytes = "0.6"
 futures = "0.3.8"
 ring = "0.16.1"
+once_cell = "1.5.2"
 
 
 [profile.release]
