--- a/echo_server/host/Cargo.toml
+++ b/echo_server/host/Cargo.toml
@@ -11,10 +11,12 @@ edition = "2018"
 libc = "0.2.48"
 optee-teec = { path = "../../../optee-teec" }
 sae_net = { path = "../../sae_net" }
+sae_core = { path = "../../../examples/sae_core/host" }
 tokio = { version = "0.3", features = ["full"] }
 tokio-util = { version = "0.5.0", features = ["full"]} 
 bytes = "0.6"
 futures = "0.3.8"
+lazy_static = "1.4.0"
 
 
 [profile.release]
