--- a/echo_client/host/Cargo.toml
+++ b/echo_client/host/Cargo.toml
@@ -18,6 +18,9 @@ bytes = "0.6"
 futures = "0.3.8"
 ring = "0.16.1"
 once_cell = "1.5.2"
+structopt = "0.3.14"
+log = "0.4"
+log4rs = "1.0.0"
 
 
 [profile.release]
