--- a/echo_server/host/Cargo.toml
+++ b/echo_server/host/Cargo.toml
@@ -17,6 +17,9 @@ tokio-util = { version = "0.5.0", features = ["full"]}
 bytes = "0.6"
 futures = "0.3.8"
 lazy_static = "1.4.0"
+structopt = "0.3.14"
+log = "0.4"
+log4rs = "1.0.0"
 
 
 [profile.release]
