--- a/update_pwd_server/host/Cargo.toml
+++ b/update_pwd_server/host/Cargo.toml
@@ -21,6 +21,8 @@ bcrypt-pbkdf = "0.1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 structopt = "0.3.14"
+log = "0.4"
+log4rs = "1.0.0"
 
 
 [profile.release]
